fix generated spell alignment

--- a/src/components/generated-spells/GeneratedSpells.css
+++ b/src/components/generated-spells/GeneratedSpells.css
@@ -37,6 +37,7 @@
 
 .generated-spells__spell-label {
   font-weight: normal;
+  display: flex;
 }
 
 .generated-spells__spell-label:has(input:disabled) {
